--- a/markdown/now.json
+++ b/markdown/now.json
@@ -7,18 +7,14 @@
       "use": "@now/static"
     },
     {
-      "src": "*.md",
+      "src": "**/*.md",
       "use": "@now/md",
       "config": {
         "title": "Markdown Example",
         "language": "en",
         "meta": [{ "name": "description", "content": "Example markdown builder deployed to ZEIT NOW"}],
-        "css": "./style.css"
+        "css": "/style.css"
       }
     }
-  ],
-  "routes": [
-    { "src":"/(.*).css", "dest": "/$1.css" },
-    { "src":"/(.*)", "dest": "/$1.html" }
   ]
 }
