--- a/now.json
+++ b/now.json
@@ -6,7 +6,17 @@
     { "src": "apollo/index.js", "use": "@now/node-server" },
     { "src": "go/*.go", "use": "@now/go" },
     { "src": "bash/*.sh", "use": "@now/bash" },
-    { "src": "markdown/*.md", "use": "@now/md" },
+    { "src": "markdown/*.css", "use": "@now/static" },
+    {
+      "src": "markdown/**/*.md",
+      "use": "@now/md",
+      "config": {
+        "title": "Markdown Example",
+        "language": "en",
+        "meta": [{ "name": "description", "content": "Example markdown builder deployed to ZEIT NOW"}],
+        "css": "/markdown/style.css"
+      }
+    },
     { "src": "nodejs/*.js", "use": "@now/node" },
     { "src": "php-7/*.php", "use": "@now/php" },
     { "src": "python/*.py", "use": "@now/python", "config": { "maxLambdaSize": "10mb" } },
