--- a/now.json
+++ b/now.json
@@ -45,6 +45,7 @@
       }
     },
     { "src": "rust-scraper/index.rs", "use": "@now/rust" },
-    { "src": "rust/index.rs", "use": "@now/rust" }
+    { "src": "rust/index.rs", "use": "@now/rust" },
+    { "src": "create-elm-app/package.json", "use": "@now/static-build", "config": { "distDir": "build" } }
   ]
 }
