--- a/now.json
+++ b/now.json
@@ -46,6 +46,7 @@
     },
     { "src": "rust-scraper/index.rs", "use": "@now/rust" },
     { "src": "rust/index.rs", "use": "@now/rust" },
+    { "src": "jekyll/build.sh", "use": "@now/static-build", "config": { "distDir": "_site" } },
     { "src": "create-elm-app/package.json", "use": "@now/static-build", "config": { "distDir": "build" } }
   ]
 }
