Add initial python-flask example (#334)
* Add initial python-flask example

* Increase max lambda size

* Add readme to python-flask with about page

* Add python-flask to main readme

* Add css and description

* Add link to source and demo

* Add link to source code

* Apply suggestions from code review

Co-Authored-By: styfle <steven@ceriously.com>

--- a/now.json
+++ b/now.json
@@ -20,6 +20,7 @@
     { "src": "nodejs/*.js", "use": "@now/node" },
     { "src": "php-7/*.php", "use": "@now/php" },
     { "src": "python/*.py", "use": "@now/python", "config": { "maxLambdaSize": "10mb" } },
+    { "src": "python-flask/**/*.py", "use": "@now/python@canary", "config": { "maxLambdaSize": "10mb" } },
     { "src": "vue/package.json", "use": "@now/static-build" },
     { "src": "create-react-app/package.json", "use": "@now/static-build", "config": { "distDir": "build" } },
     { "src": "static/**", "use": "@now/static" },
