--- a/now.json
+++ b/now.json
@@ -13,16 +13,33 @@
       "config": {
         "title": "Markdown Example",
         "language": "en",
-        "meta": [{ "name": "description", "content": "Example markdown builder deployed to ZEIT NOW"}],
+        "meta": [
+          {
+            "name": "description",
+            "content": "Example markdown builder deployed to ZEIT NOW"
+          }
+        ],
         "css": "/markdown/style.css"
       }
     },
     { "src": "nodejs/*.js", "use": "@now/node" },
     { "src": "php-7/*.php", "use": "@now/php" },
-    { "src": "python/*.py", "use": "@now/python", "config": { "maxLambdaSize": "10mb" } },
-    { "src": "python-flask/**/*.py", "use": "@now/python@canary", "config": { "maxLambdaSize": "10mb" } },
+    {
+      "src": "python/*.py",
+      "use": "@now/python",
+      "config": { "maxLambdaSize": "10mb" }
+    },
+    {
+      "src": "python-flask/**/*.py",
+      "use": "@now/python@canary",
+      "config": { "maxLambdaSize": "10mb" }
+    },
     { "src": "vue/package.json", "use": "@now/static-build" },
-    { "src": "create-react-app/package.json", "use": "@now/static-build", "config": { "distDir": "build" } },
+    {
+      "src": "create-react-app/package.json",
+      "use": "@now/static-build",
+      "config": { "distDir": "build" }
+    },
     { "src": "static/**", "use": "@now/static" },
     { "src": "nextjs/next.config.js", "use": "@now/next" },
     { "src": "nextjs-static/package.json", "use": "@now/static-build" },
@@ -32,10 +49,18 @@
     { "src": "optipng/showcase.png", "use": "@now/optipng" },
     { "src": "nodejs-hapi/index.js", "use": "@now/node-server" },
     { "src": "nodejs-koa/index.js", "use": "@now/node" },
-    { "src": "nodejs-coffee/app.coffee", "use": "now-coffee", "config": { "dest": "app.coffee" } },
+    {
+      "src": "nodejs-coffee/app.coffee",
+      "use": "now-coffee",
+      "config": { "dest": "app.coffee" }
+    },
     { "src": "express/**/*.js", "use": "@now/node" },
-    { "src": "nodejs-micro/index.js", "use":  "now-micro" },
-    { "src": "gatsby/package.json", "use": "@now/static-build", "config": { "distDir": "public" } },
+    { "src": "nodejs-micro/index.js", "use": "now-micro" },
+    {
+      "src": "gatsby/package.json",
+      "use": "@now/static-build",
+      "config": { "distDir": "public" }
+    },
     { "src": "docz/package.json", "use": "@now/static-build" },
     { "src": "typescript/src/**/*.ts", "use": "@now/node" },
     {
@@ -47,7 +72,17 @@
     },
     { "src": "rust-scraper/index.rs", "use": "@now/rust" },
     { "src": "rust/index.rs", "use": "@now/rust" },
-    { "src": "jekyll/build.sh", "use": "@now/static-build", "config": { "distDir": "_site" } },
-    { "src": "create-elm-app/package.json", "use": "@now/static-build", "config": { "distDir": "build" } }
+    {
+      "src": "jekyll/build.sh",
+      "use": "@now/static-build",
+      "config": { "distDir": "_site" }
+    },
+    {
+      "src": "create-elm-app/package.json",
+      "use": "@now/static-build",
+      "config": { "distDir": "build" }
+    },
+    { "src": "nextjs-mysql/api/**/*.js", "use": "@now/node" },
+    { "src": "nextjs-mysql/next.config.js", "use": "@now/next" }
   ]
 }
