--- a/now.json
+++ b/now.json
@@ -1,6 +1,7 @@
 {
   "version": 2,
   "name": "now-examples",
+  "aliases": ["now-examples.zeit.sh"],
   "public": true,
   "builds": [
     { "src": "package.json", "use": "@now/static-build" },
