Add "Fully Working Application" for Flaskex (#365)
* Add flaskex example

* Add secrets

* Ignore readme.md

* Add to readme and manifest.json

* Use name "Flaskex with PostgreSQL"

* Rename `flaskex` to `flaskex-postgresql` and update README.md

* Add missing space

* Update link for `flaskex-postgresql` in main README.md

* Fix typos

* Fix typo in URL

* Update .gitignore

* Update .nowignore

* Fix grammar, add links

Co-Authored-By: styfle <steven@ceriously.com>

--- a/manifest.json
+++ b/manifest.json
@@ -189,6 +189,12 @@
       "path": "/nodejs-canvas-partyparrot",
       "demo": "https://ppaas.now.sh",
       "description": "A Party Parrot generator built on node-canvas"
+    },
+    {
+      "example": "Flaskex with PostgreSQL",
+      "path": "/flaskex-postgresql",
+      "demo": "https://flaskex-postgresql.now-examples.now.sh",
+      "description": "A serverless Python app built with Flask, WTForms, bcrypt, PostgreSQL, and Bulma"
     }
   ]
 }
