Update the Go example as an API along with a static front-end (#382)
* Update Go example to have Go as the API along with a static front-end

* Remove cache folder

* Allow any file in static/ to be static

* Fix root `now.json` for updated go example

* Update styling and functionality to show date on the static page

* Better wording

* Specify static files for Go example

* Amend README and manifest to show newest URL

* Update readme

* Remove `serverless` from title

--- a/go/now.json
+++ b/go/now.json
@@ -1,7 +1,11 @@
 {
-    "version": 2,
-    "name": "go",
-    "builds": [
-        { "src": "*.go", "use": "@now/go" }
-    ]
+  "version": 2,
+  "name": "my-go-project",
+  "builds": [
+    { "src": "www/**/*", "use": "@now/static" },
+    { "src": "api/**/*.go", "use": "@now/go" }
+  ],
+  "routes": [
+    { "src": "/", "dest": "www/index.html" }
+  ]
 }
