update node-server example (#384)
* update node-server example

* change readme header

--- a/now.json
+++ b/now.json
@@ -53,7 +53,8 @@
     { "src": "nextjs-static/package.json", "use": "@now/static-build" },
     { "src": "html-minifier/index.html", "use": "@now/html-minifier" },
     { "src": "mdx-deck/deck.mdx", "use": "@now/mdx-deck" },
-    { "src": "node-server/index.js", "use": "@now/node-server" },
+    { "src": "node-server/static/**/*", "use": "@now/static" },
+    { "src": "node-server/api/**/*.js", "use": "@now/node-server" },
     { "src": "optipng/showcase.png", "use": "@now/optipng" },
     { "src": "nodejs-hapi/index.js", "use": "@now/node-server" },
     { "src": "nodejs-koa/index.js", "use": "@now/node" },
