Update to latest

--- a/nextjs-nodejs-mongodb/now.json
+++ b/nextjs-nodejs-mongodb/now.json
@@ -3,16 +3,11 @@
   "name": "nextjs-node-js-mongodb-example",
   "alias": "nextjs-nodejs-mongodb",
   "builds": [
-    { "src": "api/**/*.js", "use": "@now/node@canary" },
+    { "src": "api/**/*.js", "use": "@now/node" },
     { "src": "next.config.js", "use": "@now/next" }
   ],
   "routes": [
-    { "src": "/_next/static/(?:[^/]+/pages|chunks|runtime)/.+", "headers": { "cache-control": "immutable,max-age=31536000" } },
-    { "src": "/(.*)", "headers": { "cache-control": "s-maxage=1,stale-while-revalidate" }, "continue": true },
-    {
-      "src": "/api/auth/(.*)",
-      "dest": "api/auth/$1.js"
-    }
+    { "src": "/_next/static/(?:[^/]+/pages|chunks|runtime)/.+", "headers": { "cache-control": "immutable,max-age=31536000" } }
   ],
   "env": {
     "MONGODB_URI": "@mongodb_uri",
