--- a/monorepo/now.json
+++ b/monorepo/now.json
@@ -3,10 +3,7 @@
     "version": 2,
     "builds": [
         { "src": "www/package.json", "use": "@now/next" },
-        { "src": "api/go/*.go", "use": "@now/go" },
-        { "src": "api/python/*.py", "use": "@now/python" },
-        { "src": "api/bash/*.sh", "use": "@now/bash" },
-        { "src": "api/node/*.js", "use": "@now/node" }
+        { "src": "api/node/**/*.js", "use": "@now/node" }
     ],
     "routes": [
         {
